# fb-web

./: README.md  fb.sh
client/: .eslintrc.yml  build.sh  package-lock.json  package.json
client/cmps/: fb-app.js  home-page.js  search-page.js  tos-page.js
client/config/: minifyHtml.json  rollup.debug.js  rollup.release.js
client/html/: 404.html  app.html
couchbase/: common.sh  setup.sh  setup_docker.sh
couchbase/n1ql/: fts_index.json  proposed_indices.n1ql  published_indices.n1ql
docs/: data-design.md  rest-api.md
server/: .gitignore  Cargo.toml  config.json.sample  rustfmt.toml
server/n1ql/documents/: get_char.n1ql  get_char_list.n1ql  get_game.n1ql  get_game_list.n1ql  get_move.n1ql  get_move_list.n1ql
server/n1ql/name_sets/: update_char.n1ql  update_char_moves.n1ql  update_game.n1ql  update_game_chars.n1ql  update_game_moves.n1ql  update_move.n1ql
server/n1ql/proposals/: close.n1ql  get_last_approved.n1ql  get_latest_authors.n1ql  get_list_asc.n1ql  get_list_desc.n1ql  get_list_for_author_asc.n1ql  get_list_for_author_desc.n1ql  get_list_for_target_asc.n1ql  get_list_for_target_desc.n1ql
server/n1ql/search/: search_all.n1ql  search_target.n1ql  search_term.n1ql
server/n1ql/tagsets/: update_char_moves.n1ql  update_game_moves.n1ql
server/src/: logging.rs  main.rs
server/src/auth_service/: claims.rs  mod.rs  oauth.rs  service.rs  service_config.rs
server/src/database_adapters/: mod.rs
server/src/database_adapters/couchbase/: documents.rs  mod.rs  name_sets.rs  proposals.rs  query_executor.rs  query_store.rs  search.rs  tag_sets.rs
server/src/document_service/: mod.rs  pojos.rs  service.rs  util.rs
server/src/document_service/request_handlers/: document.rs  mod.rs  proposal.rs
server/src/file_service/: mod.rs  service.rs  service_config.rs
server/src/http_service/: http_error.rs  mod.rs  service.rs  service_container.rs  service_router.rs  util.rs
server/src/search_service/: service.rs
server/src/upload_service/: mod.rs  service.rs  service_config.rs
server/src/util/: mod.rs
(+50 files in other folders)
