[package]
name = "fb-web-server"
version = "0.3.0"
authors = ["rcashie <rubencashie@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "~1.6"
base64 = "~0.12"
bytes = "~0.5"
couchbase = { git = "https://github.com/couchbaselabs/couchbase-rs", rev = "e1c3e07b19c23eb6c11a7557c6406fb58506b026", features  = ["libcouchbase-static"] }
fern = "~0.6"
futures = "~0.3"
hyper = "~0.13"
hyper-rustls = "~0.20"
jsonwebtoken = "~7.1"
lazy_static = "~1.4"
log = "~0.4"
mime = "~0.3"
percent-encoding = "~2.1"
rand = "~0.7"
regex = "~1.3"
rust-crypto = "0.2.36"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
tokio = { version = "0.2", features = ["full"] }