[package]
name = "fb-web-server"
version = "0.4.5-alpha"
authors = ["rcashie <rubencashie@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "~1.7"
base64 = "~0.13"
bytes = "~0.6"
couchbase = { version = "1.0.0-alpha.4", features  = ["libcouchbase-static"] }
fern = "~0.6"
futures = "~0.3"
hyper = "~0.13"
hyper-rustls = "~0.21"
jsonwebtoken = "~7.2"
lazy_static = "~1.4"
log = "~0.4"
mime = "~0.3"
percent-encoding = "~2.1"
rand = "~0.7"
regex = "~1.3"
rust-crypto = "~0.2"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
tokio = { version = "~0.2", features = ["full"] }
